UPD: nginx conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -14,6 +14,9 @@ server {
     keepalive_timeout 10;
 
     #root /var/www;
+    access_log /home/kiwit/www/app/kiwit/shared/log/nginx.access.log;
+    error_log /home/kiwit/www/app/kiwit/shared/log/nginx.error.log info;
+    rewrite_log on;
 
     try_files $uri/index.html $uri.html $uri @app;
 
@@ -43,23 +46,35 @@ server {
      if ($host = 'www.kiwit.net' ) {
         rewrite  ^/(.*)$  http://kiwit.net/$1  permanent;
      }
- ## Stop Image and Document Hijacking
-      location ~* (\.jpg|\.png|\.css|\.js)$ {
-        if ($http_referer !~ ^(http://kiwit.net|http://en.kiwit.net) ) {
+
+     ## Stop Image and Document Hijacking
+     location ~ ^/(bootstrap|js|css)/  {
+       if ($http_referer !~ ^(http://kiwit.net|http://en.kiwit.net) ) {
           return 444;
-        }
-        expires 1y;
-        add_header Cache-Control public;
-        root /home/kiwit/www/app/kiwit/shared/assets;
+       }
+       
+       expires max;
+       add_header Cache-Control public;
+       root /home/kiwit/www/app/kiwit/current/public;
 
-        # Some browsers still send conditional-GET requests if there's a
-        # Last-Modified header or an ETag header even if they haven't
-        # reached the expiry date sent in the Expires header.
-        add_header Last-Modified "";
-        add_header ETag "";
-        break;
+       add_header Last-Modified "";
+       add_header ETag "";
+       break;
+     }
 
-      }
+     location ~ ^/(img)/  {
+       if ($http_referer !~ ^(http://kiwit.net|http://en.kiwit.net) ) {
+          return 444;
+       }
+       
+       expires max;
+       add_header Cache-Control public;
+       root /home/kiwit/www/app/kiwit/shared/assets;
+
+       add_header Last-Modified "";
+       add_header ETag "";
+       break;
+     }
 
     ## Only allow these full URI paths relative to document root. If you only want
      ## to reference the filename use $request_filename instead of $request_uri
@@ -72,8 +87,16 @@ server {
 
      ## Serve an empty 1x1 gif _OR_ an error 204 (No Content) for favicon.ico
       location = /favicon.ico {
-       #empty_gif;
-        return 204;
+        expires 1y;
+        add_header Cache-Control public;
+        root /home/kiwit/www/app/kiwit/shared/assets/img;
+
+        # Some browsers still send conditional-GET requests if there's a
+        # Last-Modified header or an ETag header even if they haven't
+        # reached the expiry date sent in the Expires header.
+        add_header Last-Modified "";
+        add_header ETag "";
+        break;
       }
 
       ## System Maintenance (Service Unavailable)
