--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,7 +16,7 @@ server {
   error_log /home/kiwit/www/app/kiwit/shared/log/nginx.error.log info;
   rewrite_log on;
 
-  try_files @app;
+  try_files $uri/index.html $uri.html $uri @app;
 
   ## Only allow GET and HEAD request methods
   if ($request_method !~ ^(GET|HEAD)$ ) {
