UPD: nginx conf and gemfile

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -36,7 +36,7 @@ server {
 
   ## Deny certain Referers (case insensitive)
   ## The ~* makes it case insensitive as opposed to just a ~
-  if ($http_referer ~* (babes|click|diamond|forsale|girl|jewelry|love|nudit|organic|poker|porn|poweroversoftware|sex|teen|video|webcam|zippo) ) {
+  if ($http_referer ~* (babes|click|diamond|forsale|girl|jewelry|love|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo) ) {
     return 444;
   }
 
